# scorer-python

./: LICENSE  README.md  judgeimg.py  judgeimgimshow.py  linenotify.py  saveimg.py  streaming.py  vl530l0x.py  vl530l0xtest.py
Aruco/: Aruco.py  readAR
GPIO/: GPIO.py  PWM.py
Hackathon/: awstest.py  html.php  isbn.py  read.py  zbarimg.py
Jtalk/: sample.txt  voice.txt
LineNotify/: linenotify.py
MScognitive/: mscognitive.py
SSD1306/: ssd1306_ja.py
ST7735/: st7735.py  st7735_test.py
Zbar/: command.py  scorerzbar.py  zbar.py  zbar2.py  zbarimg.py  zbartest.py
aws/: upload.py
daikin/: daikin.py  test.py
face-line/: test.py
friction/: friction.py  frictionscorer.py
houghline/: houghline.py
jointtest/: joint.py  pub.py  publisher.py  sub.py  subscriber.py
keypoints/: featuredetect_orb.py
meterjudge/: meterjudge.py
number/: readme.txt
number/LicensePlateRecognizer/Conf/: car_number_filter.txt  car_number_id.csv  cascade_lbp.xml  class_number_filter.txt  class_number_id.csv  config.xml  hiragana_filter.txt  hiragana_id.csv  local_name_filter.txt  local_name_id.csv
number/LicensePlateRecognizer/sample/: LPRecogLib.py  LPRecogLib3.py  sample.py  sample3.py  test.csv  test3.csv
number/LicensePlateRecognizer/src/: CMakeCache.txt  CMakeLists.txt  CharRecognition.cpp  CharRecognition.h  Exception.cpp  Exception.h  LPRecog.cpp  LPRecog.h  LPRecogLib.cpp  LPRecogLib.h  LicensePlateInfo.cpp  LicensePlateInfo.h  Makefile  PlateDetection.cpp  PlateDetection.h  PlateSegmentation.cpp  PlateSegmentation.h  cmake_install.cmake  install_manifest.txt  libLPRecog.so.1  libLPRecog.so.2.0.0  libLPRecogLib.so.1  libLPRecogLib.so.2.0.0  memo.txt
number/LicensePlateRecognizer/src/HMAX/: C1.cpp  C1.h  GaborS1.cpp  GaborS1.h  HMAX.cpp  HMAX.h  S1.cpp  S1.h  commonFunctions.cpp  commonFunctions.h
number/LicensePlateRecognizer/src/common/: LocalContrastNormalization.cpp  LocalContrastNormalization.hpp  RectFunctions.cpp  RectFunctions.h  argsort.hpp
number/LicensePlateRecognizer/src/shape/: binary_func.cpp  binary_func.h  load_image_dataset.cpp  load_image_dataset.h  shape_predictor.cpp  shape_predictor.h
passport/: passport.py  sauvolafast.py  tesssamplecmd.txt
roi/: boot.php  common.js  index.html  judge.php  off.php  on.php
tensorFlow/: tensor.py
vl53l0x/: vl530l0xchangeAdd.py
